--- a/html/Untitled-1.html
+++ b/html/Untitled-1.html
@@ -9,7 +9,7 @@
     .auto{
         width: 600px;
         height:200px;
-        border: 10px blue double;
+        border: 10px rgb(0, 0, 255) double;
    
     }
     .inner{
