--- a/html/Untitled-4练习.html
+++ b/html/Untitled-4练习.html
@@ -1,15 +1,19 @@
 <!-- 告知浏览器使用xhmtl html 解析页面 -->
-<!DOCTYPE html>  
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="../css/untitled-4练习.css">
 </head>
+
 <body>
     <div class="main">
-
+        <!-- <a href="http://www.w3school.com.cn/">Visit W3School</a> -->
     </div>
+    <!-- 让文字在父元素中垂直居中 只需将父元素的line-height设置为和父元素的height一样的值即可 -->
 </body>
+
 </html>
